feat: add fs option
