# openapi3.yaml
@@ -8,19 +8,28 @@ info:
     url: https://opensource.org/licenses/MIT
 
 paths:
-  # /anotherResource:
-  #   get:
-  #     operationId: getAnotherResource
-  #     tags:
-  #       - anotherResource
-  #     summary: gets the resource
-  #     responses:
-  #       200:
-  #         description: OK
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/anotherResource'
+  /jobStatus/{jobID}:
+    get:
+      operationId: getJobStatus
+      tags:
+        - jobStatus
+      summary: gets the resource
+      parameters:
+        - $ref: '#/components/parameters/jobID'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jobStatus'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+
   /export:
     post:
       operationId: createModel
@@ -52,6 +61,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
 components:
+  parameters:
+    jobID:
+      in: path
+      name: jobID
+      required: true
+      schema:
+        type: string
+      description: The jobID for status check
   schemas:
     error:
       type: object
@@ -84,13 +101,25 @@ components:
         metadata:
           $ref: './Schema/3dCatalog/3dMetadata.yaml#/components/schemas/payload'
       additionalProperties: false
-    job:
+    jobStatus:
       type: object
       description: The job response
       required:
-        - message
+        - status
+        - percentage
       properties:
-        message:
+        percentage:
+          type: number
+          minimum: 0
+          maximum: 100
+          description: percentage of task by job id
+        status:
           type: string
-          description: response
+          enum:
+            - Completed
+            - In-Progress
+            - Pending
+            - Failed
+            - Expired
+            - Aborted
           
