# src/jobStatus/routes/jobStatusRouter.ts
@@ -1,0 +1,16 @@
+import { Router } from 'express';
+import { FactoryFunction } from 'tsyringe';
+import { JobStatusController } from '../controllers/jobStatusController';
+
+const jobStatusRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
+  const router = Router();
+  const controller = dependencyContainer.resolve(JobStatusController);
+
+  router.get('/:jobID', controller.checkStatus);
+
+  return router;
+};
+
+export const JOB_STATUS_ROUTER_SYMBOL = Symbol('jobStatusRouterFactory');
+
+export { jobStatusRouterFactory };
